--- a/web/src/Annium.Blazor.MatBlazor/Components/Checkbox.razor
+++ b/web/src/Annium.Blazor.MatBlazor/Components/Checkbox.razor
@@ -1,4 +1,4 @@
-﻿@using Annium.Components.State
+﻿@namespace Annium.Blazor.MatBlazor.Components
 
 <MatCheckbox
     Value="@State.Value"
@@ -7,19 +7,3 @@
     Disabled="@Disabled">
     @ChildContent
 </MatCheckbox>
-
-@code {
-
-    [Parameter]
-    public IAtomicContainer<bool> State { get; set; } = default!;
-
-    [Parameter]
-    public RenderFragment? ChildContent { get; set; }
-
-    [Parameter]
-    public string? Class { get; set; }
-
-    [Parameter]
-    public bool Disabled { get; set; }
-
-}
