Blazor.Ant: add basic components

--- a/web/src/Annium.Blazor.Ant/Components/Checkbox.razor
+++ b/web/src/Annium.Blazor.Ant/Components/Checkbox.razor
@@ -1,4 +1,6 @@
-﻿<AntDesign.Checkbox
+﻿@namespace Annium.Blazor.Ant.Components
+
+<AntDesign.Checkbox
     Checked="@State.Value"
     CheckedChange="@((bool e) => State.Set(e))"
     @attributes="Attributes">
