Blazor.Core: improve ClassBuilder flow to static factory

--- a/web/src/Annium.Blazor.Ant/Components/FormField.razor
+++ b/web/src/Annium.Blazor.Ant/Components/FormField.razor
@@ -3,7 +3,7 @@
 @typeparam TValue
 
 <div class="@WrapperClassName">
-    <CascadingValue Value="this" TValue="IFormItem<TValue>">
+    <CascadingValue Value="this" TValue="IFormField<TValue>">
         @ChildContent
     </CascadingValue>
     <div class="ant-form-item-explain">
