Blazor.Css: cleanup

--- a/web/src/Annium.Blazor.Ant/Components/FormField.razor
+++ b/web/src/Annium.Blazor.Ant/Components/FormField.razor
@@ -2,7 +2,7 @@
 
 @typeparam TValue
 
-<div class="@WrapperClassName">
+<div class="@ClassName">
     <CascadingValue Value="this" TValue="IFormField<TValue>">
         @ChildContent
     </CascadingValue>
