Blazor.Core: allow observing custom targets

--- a/web/src/Annium.Blazor.Ant/Components/TextField.razor
+++ b/web/src/Annium.Blazor.Ant/Components/TextField.razor
@@ -6,6 +6,6 @@
     TValue="TValue"
     Value="@InternalState.Value"
     OnInput="@(e => InternalState.Set((TValue) e.Value))"
-    @attributes="Attributes">
+    Attributes="@Attributes">
     @ChildContent
 </AntDesign.Input>
