Blazor.MatBlazor: fix Checkbox

--- a/web/src/Annium.Blazor.MatBlazor/Components/Checkbox.razor
+++ b/web/src/Annium.Blazor.MatBlazor/Components/Checkbox.razor
@@ -2,7 +2,7 @@
 
 <MatCheckbox
     Value="@State.Value"
-    ValueChanged="@((bool e) => State.Set(e))"
+    ValueChanged="@((bool e) => { State.Set(e); return Task.CompletedTask; })"
     Class="@Class"
     Disabled="@Disabled">
     @ChildContent
