Ant: prepare fields

--- a/web/src/Annium.Blazor.Ant/Components/CheckboxField.razor
+++ b/web/src/Annium.Blazor.Ant/Components/CheckboxField.razor
@@ -1,8 +1,8 @@
 ﻿@namespace Annium.Blazor.Ant.Components
 
 <AntDesign.Checkbox
-    Checked="@State.Value"
-    CheckedChange="@((bool e) => State.Set(e))"
+    Checked="@InternalState.Value"
+    CheckedChange="@((bool e) => InternalState.Set(e))"
     @attributes="Attributes">
     @ChildContent
 </AntDesign.Checkbox>
