--- a/web/src/Annium.Blazor.Ant/Components/TextField.razor
+++ b/web/src/Annium.Blazor.Ant/Components/TextField.razor
@@ -9,6 +9,7 @@
     TValue="TValue"
     Value="@Value"
     OnInput="@SetValue"
+    OnPressEnter="@OnPressEnter"
     @attributes="Attributes">
     @ChildContent
 </Input>
