--- a/web/src/Annium.Blazor.Ant/Components/DatePickerField.razor
+++ b/web/src/Annium.Blazor.Ant/Components/DatePickerField.razor
@@ -3,7 +3,7 @@
 <AntDesign.DatePicker
     TValue="DateTime"
     Value="@InternalState.Value"
-    OnChange="@((e, _) => InternalState.Set(e))"
+    ValueChanged="@(e => InternalState.Set(e))"
     @attributes="Attributes">
     @ChildContent
 </AntDesign.DatePicker>
