--- a/web/src/Annium.Blazor.Charts/Components/Chart.razor
+++ b/web/src/Annium.Blazor.Charts/Components/Chart.razor
@@ -1,6 +1,4 @@
-﻿@using Annium.Blazor.Charts.Domain
-@using Annium.Blazor.Charts.Domain.Contexts
-@using Annium.Blazor.Charts.Internal.Domain.Interfaces.Contexts
+﻿@using Annium.Blazor.Charts.Internal.Domain.Interfaces.Contexts
 
 @namespace Annium.Blazor.Charts.Components
 
