--- a/web/src/Annium.Blazor.Charts/Components/Pane.razor
+++ b/web/src/Annium.Blazor.Charts/Components/Pane.razor
@@ -1,5 +1,4 @@
-﻿@using Annium.Blazor.Charts.Domain
-@using Annium.Blazor.Charts.Internal.Domain.Interfaces.Contexts
+﻿@using Annium.Blazor.Charts.Internal.Domain.Interfaces.Contexts
 
 @namespace Annium.Blazor.Charts.Components
 
