--- a/web/demo/Demo.Blazor.Charts/App.razor
+++ b/web/demo/Demo.Blazor.Charts/App.razor
@@ -1,7 +1,7 @@
 @using Annium.Blazor.Css
-@using Microsoft.AspNetCore.Components.Routing
+@using Annium.Blazor.Routing
 
-<Router AppAssembly="@typeof(Program).Assembly">
+<Router>
     <Found Context="routeData">
         <RouteView RouteData="@routeData" />
     </Found>
@@ -9,4 +9,5 @@
         <p>Sorry, there's nothing at this address.</p>
     </NotFound>
 </Router>
+
 <StyleSheet />
