--- a/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
+++ b/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
@@ -16,6 +16,7 @@
     </Pane>
     <Pane CssClass="@Styles.LinesPane">
         <PaneSeries>
+            <LineSeries Source="_openSeries" />
         </PaneSeries>
         <PaneBottom CssClass="@Styles.PaneBottom">
             <XAxis />
