--- a/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
+++ b/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
@@ -7,7 +7,7 @@
     <Pane CssClass="@Styles.CandlesPane">
         <PaneSeries>
             <CandleSeries T="Candle" Source="@_candleSeries" />
-            <Label T="Candle" Source="@_candleSeries" GetText="GetLabel" Top="20" Left="20" Width="100" Height="15" />
+            <Label T="Candle" Source="@_candleSeries" GetText="GetLabel" Top="20" Left="20" />
             <Resolution CssClass="@Styles.Resolution" />
         </PaneSeries>
         <PaneRight CssClass="@Styles.PaneRight">
