Demo.Blazor: add Multilabel

--- a/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
+++ b/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
@@ -7,7 +7,7 @@
     <Pane CssClass="@Styles.CandlesPane">
         <PaneSeries>
             <CandleSeries T="Candle" Source="@_candleSeries" />
-            <Label T="Candle" Source="@_candleSeries" Text="@((Func<Candle, string>) GetLabel)" Top="20" Left="20" />
+            <Label T="Candle" Source="@_candleSeries" Text="@_getCandleLabel" Top="20" Left="20" />
             <MultiRangeBlockSeries
                 TM="MultiRangeValue<RangeItem>"
                 TI="RangeItem"
@@ -15,6 +15,13 @@
                 Centered="true"
                 ContinueLast="false"
                 ItemColor="@("rgba(50, 0, 150, 0.5)")" />
+            <MultiLabel
+                TValue="MultiRangeValue<RangeItem>"
+                TItem="RangeItem"
+                Source="_rangeSeries"
+                Text="@_getRangeText"
+                Left="@_getRangeLeft"
+                Top="@_getRangeTop" />
             <Resolution CssClass="@Styles.Resolution" />
         </PaneSeries>
         <PaneRight CssClass="@Styles.PaneRight">
