--- a/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
+++ b/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
@@ -8,7 +8,7 @@
         <PaneSeries>
             <CandleSeries T="Candle" Source="@_candleSeries" />
             <Label T="Candle" Source="@_candleSeries" Text="@_getCandleLabel" Top="20" Left="20" />
-            <MultiRangeBlockSeries
+            <MultiRangeSeries
                 TM="MultiRangeValue<RangeItem>"
                 TI="RangeItem"
                 Source="_rangeSeries"
