--- a/web/src/Annium.Blazor.Ant/Components/PasswordField.razor
+++ b/web/src/Annium.Blazor.Ant/Components/PasswordField.razor
@@ -1,6 +1,5 @@
-﻿@namespace Annium.Blazor.Ant.Components
-
-@using Annium.Core.Mapper
+﻿@using Annium.Core.Mapper
+@namespace Annium.Blazor.Ant.Components
 
 @inject IMapper mapper
 
