--- a/web/src/Annium.Blazor.MatBlazor/Components/TextField.razor
+++ b/web/src/Annium.Blazor.MatBlazor/Components/TextField.razor
@@ -1,4 +1,5 @@
-﻿@namespace Annium.Blazor.MatBlazor.Components
+﻿@using MatBlazor;
+@namespace Annium.Blazor.MatBlazor.Components
 
 @typeparam TValue
 
