--- a/web/src/Annium.Blazor.Charts/Components/PaneRight.razor
+++ b/web/src/Annium.Blazor.Charts/Components/PaneRight.razor
@@ -1,12 +1,10 @@
 ﻿@using Annium.Blazor.Charts.Internal.Domain.Interfaces.Contexts
 @namespace Annium.Blazor.Charts.Components
 
-@inject Style _style;
-
 <div @ref="_block" class="@Class">
     <CascadingValue Value="SideContext" TValue="IManagedVerticalSideContext">
-        <canvas @ref="_canvas" class="@_style.Canvas" width="10" height="10"></canvas>
-        <canvas @ref="_overlay" class="@_style.Canvas" width="10" height="10"></canvas>
+        <canvas @ref="_canvas" class="@Styles.Canvas" width="10" height="10"></canvas>
+        <canvas @ref="_overlay" class="@Styles.Canvas" width="10" height="10"></canvas>
         @ChildContent
     </CascadingValue>
 </div>
