Blazor.Ant: cleanup, fix imports

--- a/web/src/Annium.Blazor.Ant/Components/PasswordField.razor
+++ b/web/src/Annium.Blazor.Ant/Components/PasswordField.razor
@@ -1,13 +1,10 @@
-﻿@using Annium.Core.Mapper
-@namespace Annium.Blazor.Ant.Components
+﻿@namespace Annium.Blazor.Ant.Components
 
-@inject IMapper mapper
-
-<InputPassword
+<AntDesign.InputPassword
     TValue="TValue"
     Value="@Value"
     OnInput="@SetValue"
     OnPressEnter="@OnPressEnter"
     @attributes="Attributes">
     @ChildContent
-</InputPassword>
+</AntDesign.InputPassword>
