Blazor.Charts: Plain -> Point

--- a/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
+++ b/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
@@ -29,7 +29,7 @@
     </Pane>
     <Pane CssClass="@Styles.LinesPane">
         <PaneSeries>
-            <LineSeries T="PlainValue" Source="_openSeries" />
+            <LineSeries T="PointValue" Source="_openSeries" />
         </PaneSeries>
         <PaneBottom CssClass="@Styles.PaneBottom">
             <XAxis />
