--- a/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
+++ b/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
@@ -1,5 +1,5 @@
 @using Annium.Blazor.Charts.Components
-@using Annium.Blazor.Charts.Domain
+@using Annium.Blazor.Charts.Domain.Models
 @namespace Demo.Blazor.Charts.Pages.Home
 
 <Chart ChartContext="@ChartContext" CssClass="@Styles.Chart">
