--- a/web/demo/Demo.Blazor.Ant/Pages/Home/Page.razor
+++ b/web/demo/Demo.Blazor.Ant/Pages/Home/Page.razor
@@ -1,5 +1,6 @@
 @using Annium.Blazor.Ant.Components
 @namespace Demo.Blazor.Ant.Pages.Home
+@inherits Annium.Blazor.Core.BaseComponent
 
 <div>
     <FormField TValue="bool" State="_state.At(x => x.IsChecked)">
