Blazor.Charts: update demo to show PaneBottom in separate Pane

--- a/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
+++ b/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
@@ -45,12 +45,14 @@
         <PaneSeries>
             <LineSeries T="PointValue" Source="_openSeries" />
         </PaneSeries>
-        <PaneBottom CssClass="@Styles.PaneBottom">
-            <XAxis />
-        </PaneBottom>
         <PaneRight CssClass="@Styles.PaneRight">
             <YAxis />
         </PaneRight>
+    </Pane>
+    <Pane CssClass="@Styles.BottomPane">
+        <PaneBottom CssClass="@Styles.PaneBottom">
+            <XAxis />
+        </PaneBottom>
     </Pane>
     <Crosshair />
 </Chart>
