--- a/web/demo/Demo.Blazor.Interop/Pages/Element/Page.razor
+++ b/web/demo/Demo.Blazor.Interop/Pages/Element/Page.razor
@@ -11,7 +11,7 @@
     <div @ref="@_eventsBlock" class="@Styles.Block">
         Events block
     </div>
-    <div @ref="@_resizedBlock" class="@ClassBuilder.With(() => !IsResized, Styles.Block).With(() => IsResized, Styles.ResizedBlock).Build()">
+    <div @ref="@_resizedBlock" class="@ClassBuilder.With(() => !_isResized, Styles.Block).With(() => _isResized, Styles.ResizedBlock).Build()">
         <button onclick="@ToggleResizedBlockSize">resize</button>
     </div>
 </div>
