charts: add Zoom component

--- a/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
+++ b/web/demo/Demo.Blazor.Charts/Pages/Home/Page.razor
@@ -36,6 +36,7 @@
                 Left="@_getLineLabelLeft"
                 Top="@_getLineLabelTop" />
             <Resolution CssClass="@Styles.Resolution" />
+            <Zoom CssClass="@Styles.Zoom" />
         </PaneSeries>
         <PaneRight CssClass="@Styles.PaneRight">
             <YAxis />
